+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.4.2a
===========================

Extension Modules
-----------------

- weakref proxy has incorrect __nonzero__ behavior.  SF bug #1770766.


What's New in Python 2.4.1 final?
=================================

*Release date: 30-MAR-2005*

Core and builtins
-----------------

- Move exception finalisation later in the shutdown process - this 
  fixes the crash seen in bug #1165761

Tests
-----

- SF patch 1167316: doctest.py fails self-test if run directly.

Build
-----

- SF patch 1171767: Darwin 8's headers are anal about POSIX compliance, 
  and linking has changed (prebinding is now deprecated, and libcc_dynamic 
  no longer exists). This configure patch makes things right.


What's New in Python 2.4.1c2?
=============================

*Release date: 17-MAR-2005*

Library
-------

- Fixed decimal operator and comparison methods to return NotImplemented
  instead of raising a TypeError when interacting with other types. 
  Allows other classes to successfully implement __radd__ style methods.

- Bug #1163325:  Decimal infinities failed to hash.  Attempting to
  hash a NaN raised an InvalidOperation instead of a TypeError.

- Bug #1160802: can't build Zope on Windows with 2.4.1c1.  The
  ``MSVCCompiler`` class in distutils forgot to record that it was
  initialized, and continued adding redundant entries to the system
  ``PATH`` environment variable until ``putenv()`` complained about the
  size.  This only affected building projects with many C extensions,
  and only on Windows using Microsoft's compiler.  This wasn't visible
  before because a bugfix first included in 2.4.1c1 provoked it (bug
  #1110478: revert os.environ.update to do putenv again).

- Bug #1156259: Seeking in codecs.reader was broken, now fixed.

Tests
-----

- Fix the test for socket.getfqdn() in test_socket to also consider the host